plugins {
    id 'com.android.library'
    id 'maven-publish'
    id 'com.github.johnrengelman.shadow' version '8.1.1'
}

repositories {
    mavenCentral()
    google()
}

android {
    namespace = "io.approov.service.okhttp"
    compileSdk 34

    defaultConfig {
        minSdkVersion 23
        targetSdkVersion 34
        consumerProguardFiles 'consumer-rules.pro'
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }
    testOptions {
        unitTests {
            includeAndroidResources = false
            returnDefaultValues = true
        }
    }
}

configurations {
    shadowed

    testImplementation {
        exclude group: 'io.approov', module: 'approov-android-sdk'
    }
}

tasks.register('shadowJar', com.github.jengelman.gradle.plugins.shadow.tasks.ShadowJar) {
    archiveClassifier.set('shadow')
    configurations = [project.configurations.shadowed]
    relocate 'org.bouncycastle', 'io.approov.internal.bouncycastle'
    exclude 'META-INF/**'
}

dependencies {
    implementation 'com.squareup.okhttp3:okhttp:4.12.0'
    implementation 'io.approov:approov-android-sdk:3.5.3'
    shadowed 'org.bouncycastle:bcprov-jdk15to18:1.84'
    compileOnly files(tasks.named('shadowJar'))
    implementation files(tasks.named('shadowJar'))
    implementation 'androidx.annotation:annotation-jvm:1.9.1'
    testImplementation 'junit:junit:4.13.2'
    testImplementation project(':approov-sdk')
    testImplementation project(':test-support')
    testImplementation 'org.robolectric:robolectric:4.11.1'
    testImplementation 'org.json:json:20231013'
    testImplementation 'androidx.test:core:1.6.1'
}

tasks.withType(JavaCompile) {
    dependsOn tasks.named('shadowJar')
}
